--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body{
+    text-align: center;
+}
 .title{
     font-size: 80px;
     font-weight: 800;
@@ -6,12 +9,15 @@
 .title1{
     font-size: 60px;
     font-weight: 600;
+    text-align: center;
 }
 
 h2{
     font-size: 40px;
     font-weight: 400;
     color: indigo;
+    padding: 10px;
+    background-color: burlywood;
 }
 
 p{
@@ -20,11 +26,13 @@ p{
 
 ol{
     color: green;
+    padding: auto;
 }
 
 ul{
     color: white;
     background-color: wheat;
+    padding: auto;
 }
 
 .back{
